registered the user successfully and saved the record in MongoDb

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGO_URL=mongodb+srv://mehtab:Abcd1234
-@cluster0.ftl9s.mongodb.net/test
+MONGO_URL=mongodb+srv://mehtab:Abcd1234@cluster0.ftl9s.mongodb.net/test
